test/src/e2e_vm_tests/test_programs/should_pass/language/u256/u256_abi/src/main.sw
script; 

fn main() -> u256 {
    log(0x00000000000000000000000000000000000000000000000000000002u256);
    0x00000000000000000000000000000000000000000000000000000001u256
}